--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.40.1",
     "@types/swiper": "^6.0.0",
     "axios": "^1.7.1",
     "date-fns": "^3.6.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
+    "recoil": "^0.7.7",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
