--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
+    "react-snowfall": "^2.1.0",
     "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
     "swiper": "^11.1.4"
